<resources>
    <string name="app_name">All My Food</string>
    <string name="register_text"> <u>Registrate</u></string>
    <string name="login_text">Iniciar sesión</string>
    <string name="forgotpass_text"> <u>¿Olvidaste tu contraseña?</u></string>
    <string name="newuser_question">¿Usuario nuevo?</string>
    <string name="username_hint">Correo o nombre de usuario</string>
    <string name="password_hint">Tu contraseña</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">¡Bienvenido, @User!</string>
    <string name="about">About</string>
    <string name="about_text">All My Food es una aplicación que te permitirá preparar miles de deliciosas recetas para que las disfrutes con tus familiares y amigos. \n\nTambién te permitirá conocer nuevas recetas subidas por la comunidad de usuarios y así puedas expandir tus conocimientos de cocina. \n\nPodrás ver recetas muy detalladas y con contenido visual interactivo, con el que podrás crear con éxito todas las recetas que quieras. \n\nEsperamos que tu experiencia dentro de AllMyFood sea muy gratificante y puedas convertirte en un excelente cocinero.</string>
    <string name="explore_text">Explorar</string>
    <string name="mylist_text">Mi lista</string>
    <string name="myrecipes_text">Mis recetas</string>
    <string name="create_recipe_text">Nueva receta</string>
    <string name="getout_text">Salir</string>
    <string name="fullname_hint">Nombre completo</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="tv_add_photo">Añade una foto de perfil:</string>
    <string name="btn_reg_text">Registrarse</string>
    <string name="title_login">Iniciar Sesión - All My Food</string>
    <string name="title_register">Registrate - All My Food</string>
    <string name="title_about">About All My Food</string>
    <string name="title_Allmyfood">All My Food</string>
    <string name="title_explore">Explorar</string>
    <string name="title_my_list">Mi lista de compras</string>
    <string name="title_shop_list">Mis listas de compras</string>
    <string name="title_my_recipe">Mis Recetas</string>
    <string name="title_recipe">Receta</string>
    <string name="title_create_recipe">Crear receta</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_confirmPass">Confirmar contraseña</string>
    <string name="string_ingredients">Ingredientes</string>
    <string name="text_preparacion">Preparación</string>
    <string name="itemList">Items</string>
    <string name="lorem">Lorem</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non orci pellentesque, aliquam risus nec, feugiat quam. Nullam faucibus non ante at tempor.</string>
    <string name="text_title_card_two">Tacos al Pastor</string>
    <string name="text_desc_card_two">Receta práctica para preparar unos deliciosos Tacos al Pastor, el platillo favorito de la gastronomía mexicana traído hasta nuestro país…</string>
    <string name="card_desc_complete">Receta práctica de como preparar unas deliciosas pupusas de chicharrón. Este platillo salvadoreño es el favorito de muchos no solo en El Salvador sino en muchos paises latinos.</string>
    <string name="check_text_one">Engrasar la plancha</string>
    <string name="chekck_text_two">Preparar la masa</string>
    <string name="check_text_three">Crear las tortillas</string>
    <string name="check_text_four">Agregar los ingredientes</string>
    <string name="check_text_five">Ponerla en la plancha (5-min)</string>
    <string name="check_text_six">Servir con salsa y curtido</string>
    <string name="recipe_name_hint">Nombre de tu receta</string>
    <string name="add_desc_hint">Descripción de tu receta:</string>
    <string name="add_ingredients_hint">Agrega los ingredientes de tu receta:</string>
    <string name="add_steps_hint">Agrega los pasos para preparar tu receta:</string>
    <string name="new_ingredient_hint">Nuevo ingrediente</string>
    <string name="step_one_text">Paso 1</string>
    <string name="step_two_text">Paso 2</string>
    <string name="step_four_text">Nuevo paso…</string>
    <string name="step_three_text">Paso 3</string>
    <string name="save_recipe_text">Guardar receta</string>
    <string name="selection_list_text">Listas de compras</string>
    <string name="my_list_text">Mis listas de compras</string>
    <string name="item_mylist_text_one">Carne molida</string>
    <string name="item_mylist_text_two">Queso cheddar</string>
    <string name="item_mylist_text_three">Pan para hamburguesa</string>
    <string name="item_mylist_text_four">Ketchup</string>
    <string name="item_mylist_text_five">Lechuga</string>
    <string name="item_mylist_text_six">Servilletas</string>
    <string name="k_username">username</string>
    <string name="k_fullname">fullname</string>
    <string name="k_userImage">userImage</string>
    <string name="placeholder">placeholder</string>
    <string name="error">Algo salió mal, intenta nuevamente . . .</string>
    <string name="logout">Cerrar sesión</string>
    <string name="create_list">Nueva lista</string>
    <string name="return_text">Regresar</string>
    <string name="list_name">Nombre</string>
    <string name="list_add">Agrega un elemento</string>
    <string name="add_photo_text"> <u>Agrega tu foto de perfil</u></string>
    <string name="profileImage_desc">profileImage</string>
    <string name="tv_add_recipe_image"><u>Agrega imagen de tu receta</u></string>
    <string name="save">Guardar</string>
</resources>
