<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/fillgroupStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_big"
            android:layout_marginBottom="@dimen/margin_wide"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45">

                <EditText
                    android:id="@+id/et_regUsr"
                    style="@style/editText_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:layout_marginTop="@dimen/margin_wide"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:hint="@string/username_hint" />

                <EditText
                    android:id="@+id/et_regFullname"
                    style="@style/editText_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:hint="@string/fullname_hint" />

                <EditText
                    android:id="@+id/et_regEmail"
                    style="@style/editText_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:layout_marginBottom="@dimen/margin_wide"
                    android:hint="@string/email_hint" />

        </LinearLayout>

        <LinearLayout
            style="@style/fillgroupStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_big"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.32999998">

                <EditText
                    android:id="@+id/et_regPass"
                    style="@style/editText_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:layout_marginTop="@dimen/margin_wide"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/et_regConfirm"
                    style="@style/editText_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:layout_marginBottom="@dimen/margin_wide"
                    android:hint="@string/hint_confirmPass"
                    android:inputType="textPassword" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginBottom="@dimen/margin_big"
            android:paddingLeft="@dimen/margin_wide"
            android:paddingRight="@dimen/margin_wide"
            android:text="@string/btn_reg_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />



</androidx.constraintlayout.widget.ConstraintLayout>