<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.lists.MyListFragment">

    <data>
        <variable
            name="viewModel"
            type="com.wrmh.allmyfood.views.lists.MyListViewModel" />
    </data>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_wide">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/listView_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.MaterialComponents.Light">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/list_editable_name"
                        style="@style/font_style_grey_bold_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_wide"
                        android:layout_margin="@dimen/margin_wide"
                        android:text="@{viewModel.selectedProperty.name}"
                        android:autofillHints="no"
                        android:hint="@string/list_name"
                        android:inputType="text" />

                    <TextView
                        style="@style/font_style_grey_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_small"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:text="@string/itemList" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_ml"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="4"
                        tools:listitem="@layout/component_editable_list_item"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/btn_add_element"
                            android:layout_width="60dp"
                            android:layout_height="35dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/margin_wide"
                            android:layout_marginBottom="@dimen/margin_wide"
                            android:contentDescription="@string/placeholder"
                            app:srcCompat="@drawable/ic_add_circle_black" />

                        <Button
                            android:id="@+id/save_list_api"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            style="@style/button_style"
                            android:text="@string/save"
                            tools:ignore="RelativeOverlap" />

                        <ImageView
                            android:id="@+id/btn_rm_element"
                            android:layout_width="60dp"
                            android:layout_height="35dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/margin_wide"
                            android:layout_marginBottom="@dimen/margin_wide"
                            android:gravity="end"
                            android:tint="@android:color/black"
                            app:srcCompat="@drawable/ic_baseline_remove_circle_black"
                            android:contentDescription="@string/placeholder" />

                    </RelativeLayout>


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</layout>